FIX - Camp popup overlapping nav

--- a/inc/scss/_theme.scss
+++ b/inc/scss/_theme.scss
@@ -160,7 +160,7 @@
 	    position: absolute;
 	    transform: translateX(-50%);
 	    width: 300px;
-		z-index: 999;
+		z-index: 100;
 		margin-left: 70px;
 		margin-bottom: 1em;
 		
